# pfma

./: .gitattributes  .gitignore  Dockerfile  README copy.md  README.md  Rapport.md  design_report.md  pyproject.toml  requirements.txt  setup.bat
backend/: README.md  main.py  main_complex.py  requirements.txt  test_api.py
data/processed/: data_cleaned.csv
frontend/: app.py
models/: best_model.pkl  metadata.json  scaler.pkl
notebooks/: saleshouses_ml_pipeline copy 2.ipynb  saleshouses_ml_pipeline copy.ipynb  saleshouses_ml_pipeline.ipynb  saleshouses_ml_pipeline0.ipynb  script.py
reports/: model_metrics.csv  test_predictions.json
