[project]
name = "pfma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "joblib>=1.1.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.11.0",
    "streamlit>=1.20.0",
    "uvicorn[standard]>=0.20.0",
]